# reactor-algebra

./: CMakeLists.txt  README.md
lib/include/reactor/algebra/: Transform2dInside.hpp  Vector2dInside.hpp
lib/src/reactor/algebra/: Transform2d.cpp  Vector2d.cpp
